# ccusage-monitor

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  benchmark_performance.py  ccusage_monitor.py  init_dependency.py  performance_monitor.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  test_optimizations.py
.github/workflows/: README.md  lint.yml  publish-release.yml  publish-test.yml  publish.yml  test.yml
ccusage_monitor/: __init__.py  __main__.py  cache.py  calculations.py  calculations_optimized.py  data.py  data_optimized.py  display.py  display_optimized.py  display_rich.py  main.py  main_optimized.py  main_rich.py  protocols.py
ccusage_monitor/app/: __init__.py  main.py  main_rich.py
ccusage_monitor/core/: __init__.py  cache.py  calculations.py  config.py  data.py  performance.py
ccusage_monitor/ui/: __init__.py  display.py  rich_display.py  rich_display_new.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIG.md  DEVELOPER_GUIDE.md  FLOWCHART.md  INSTALL.md  RICH_UI.md  USAGE.md
scripts/: check_package_hash.py  check_pypi_version.py
tests/: test_app_main.py  test_cache.py  test_calculations.py  test_calculations_optimized.py  test_ccusage_monitor.py  test_core_cache.py  test_core_calculations.py  test_core_config.py  test_core_data.py  test_data.py  test_data_optimized.py  test_display.py  test_display_functions.py  test_display_optimized.py  test_main.py  test_new_structure.py  test_performance_optimizations.py  test_refactoring.py  test_ui_display.py
