[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-usage-monitor"
version = "1.0.0"
description = "A real-time terminal monitoring tool for Claude AI token usage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Maciek", email = "maciek@roboblog.eu" },
]
keywords = ["claude", "ai", "token", "monitoring", "usage", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pytz",
]

[project.urls]
Homepage = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor"
Repository = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor.git"
Issues = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor/issues"

[project.scripts]
ccusage-monitor = "ccusage_monitor:main"
claude-monitor = "ccusage_monitor:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["ccusage_monitor.py"]

[tool.hatch.build.targets.sdist]
include = [
    "ccusage_monitor.py",
    "README.md",
    "LICENSE",
    "CLAUDE.md",
    "DEVELOPMENT.md",
    "CONTRIBUTING.md",
    "TROUBLESHOOTING.md",
]