[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccusage-monitor"
version = "0.0.1"
description = "Real-time Claude token usage monitor with beautiful terminal interface"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "zhiyue", email = "cszhiyue@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "pytz>=2021.1",
]

[project.scripts]
ccusage-monitor = "ccusage_monitor:main"

[project.urls]
Homepage = "https://github.com/zhiyue/ccusage-monitor"
Repository = "https://github.com/zhiyue/ccusage-monitor"
Issues = "https://github.com/zhiyue/ccusage-monitor/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]